<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/musicContent"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/mycolor22">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txtWrapperType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/Wrapptertype"
            android:textColor="@color/mycolor2"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/txtKind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/kind"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/txtWrapperType"/>
        <TextView
            android:id="@+id/txtTrackID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/trackid"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtWrapperType"
            />
        <TextView
            android:id="@+id/txtItunesExtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/has_itunes_extras"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_toEndOf="@id/txtTrackID"
            android:layout_marginStart="60dp"
            android:layout_below="@id/txtWrapperType"
            />
        <TextView
            android:id="@+id/txtArtistname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/artist_name"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtTrackID"
            />
        <TextView
            android:id="@+id/txtTrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/track_name"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtArtistname"
            />
        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/country"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtTrackName"
            />
        <TextView
            android:id="@+id/txtCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/currency"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_toEndOf="@id/txtCountry"
            android:layout_marginStart="50dp"
            android:layout_below="@id/txtTrackName"
            />
        <TextView
            android:id="@+id/txtTrackUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/track_url"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtCountry"
            />
        <TextView
            android:id="@+id/txtTrackPreviewUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="4dp"
            android:text="@string/trqack_preview_url"
            android:textColor="@color/mycolor2"
            android:textSize="15sp"
            android:layout_below="@id/txtTrackUrl"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgartWork1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtTrackPreviewUrl"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgartWork2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgartWork1"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>